# traffic_monitoring_ml

./: .gitignore  README.md  memoria_proyecto.md  presentation_final.pptx  pyproject.toml
app/: app.py  model.py  preprocessing.py  service.py
app/mock_data/: collision_indexes.parquet
data/raw/: uk-road-safety-dataset-guide-2024.xlsx
notebook/: 01_eda_preprocessing.ipynb  02_feature_selection.ipynb  03_modeling.ipynb
src/traffic_monitoring_ml/: config.py  data.py  utils.py
