[project]
name = "traffic_monitoring_ml"
version = "0.1.0"
description = "Sistema de prediccion de severidad de accidentes de tráfico"
authors = [
    {name = "Unai Riaño"}
]
readme = "README.md"
requires-python = ">=3.11,<=3.13"
package-mode = false
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "catboost (>=1.2.10,<2.0.0)",
    "optuna (>=4.8.0,<5.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "geohash2 (>=1.1,<2.0)",
    "streamlit (>=1.57.0,<2.0.0)",
]

[dependency-groups]
dev = [
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
